fix: use `overflow-x: auto`

--- a/themes/mdbook/css/general.css
+++ b/themes/mdbook/css/general.css
@@ -19,7 +19,7 @@ html {
 body {
   margin: 0;
   font-size: 1.6rem;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 code {
